# EntropyCore

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  prerelease.yml  release.yml
Examples/: CInteropExample.c  CInteropExample_linkshim.cpp  ConcurrencyAPIExample.c  CustomAppDelegateExample.cpp  EntropyCppAppExample.cpp  EntropyMainExample.c  EntropyObjectExample.cpp  EntropyObjectHandleExample.cpp  VFSCAPIExample.c  VFS_Basics.cpp  VFS_CopyMove.cpp  VFS_LinesAndBatch.cpp  VFS_Metadata.cpp  VFS_Streams.cpp  VirtualFileStreamingExample.cpp  VirtualFileSystemExample.cpp  WorkContractExample.cpp  WorkGraphCAPIExample.c  WorkGraphYieldableExample.cpp
Tests/: EntropyObjectTests.cpp  GraphTests.cpp  MinimalGTestNoMain.cpp  MinimalTest.cpp  TestWorkServiceSingleton.h  VirtualFileSystemErrorMappingTests.cpp  VirtualFileSystemExampleParityTests.cpp  VirtualFileSystemStreamingTests.cpp  WorkContractGroupLifetimeTests.cpp  WorkContractGroupTests.cpp  WorkGraphTests.cpp
Tests/Concurrency/: MainThreadWorkTests.cpp  WorkContractGroupAccountingTests.cpp  WorkContractGroupLifetimeTests.cpp  WorkContractGroupReentranceTests.cpp  WorkContractGroupTests.cpp  WorkContractHighContentionTests.cpp  WorkServiceTests.cpp
Tests/Concurrency/WorkGraph/: WorkGraphArchitectureTests.cpp  WorkGraphRegressionTests.cpp  WorkGraphServiceIntegrationTests.cpp  WorkGraphSpecializedTests.cpp  WorkGraphTests.cpp
Tests/Core/: DebugInterfaceTests.cpp  EntropyObjectTests.cpp  GraphTests.cpp  LoggingTests.cpp  SignalTreeTests.cpp  TimerTests.cpp  TypeSystemTests.cpp  WeakRefSafetyTest.cpp
Tests/TestHelpers/: VFSTestHelpers.cpp  VFSTestHelpers.h
Tests/VirtualFileSystem/: VFSErrorMappingTests.cpp  VFSLockCacheTests.cpp  VFSSimpleTest.cpp  VFSTests.cpp  VFSTextFidelityTests.cpp
cmake/: EntropyCoreConfig.cmake.in
include/entropy/: entropy_concurrency_types.h  entropy_directory_handle.h  entropy_file_handle.h  entropy_file_operation_handle.h  entropy_vfs_types.h  entropy_virtual_file_system.h  entropy_work_contract_group.h  entropy_work_contract_handle.h  entropy_work_graph.h  entropy_work_service.h  entropy_write_batch.h
src/: CoreCommon.h  EntropyCore.h  ServiceLocator.h
src/Concurrency/: AdaptiveRankingScheduler.cpp  AdaptiveRankingScheduler.h  DirectScheduler.h  IConcurrencyProvider.h  IWorkScheduler.h  NodeScheduler.cpp  NodeScheduler.h  NodeStateManager.cpp  NodeStateManager.h  RandomScheduler.cpp  RandomScheduler.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  SignalTree.h  SpinningDirectScheduler.h  WorkContractGroup.cpp  WorkContractGroup.h  WorkContractHandle.cpp  WorkContractHandle.h  WorkGraph.cpp  WorkGraph.h  WorkGraphEvents.h  WorkGraphTypes.h  WorkService.cpp  WorkService.h
src/Core/: EntropyApplication.cpp  EntropyApplication.h  EntropyCAPI.cpp  EntropyClass.h  EntropyInterop.h  EntropyMain.cpp  EntropyObject.cpp  EntropyObject.h  EntropyService.h  EntropyServiceRegistry.cpp  EntropyServiceRegistry.h  EventBus.h  HandleSlot.h  RefObject.h  SlotPool.h  Timer.cpp  Timer.h  TimerService.cpp  TimerService.h  WeakControlBlock.h  entropy_c_api.h  entropy_main.h
src/Debug/: Debug.h  DebugUtilities.h  INamed.h  Profiling.h
src/Graph/: AcyclicNodeHandle.h  DirectedAcyclicGraph.h
src/Logging/: CLogger.cpp  CLogger.h  ConsoleSink.cpp  ConsoleSink.h  ILogSink.h  LogEntry.h  LogLevel.h  Logger.cpp  Logger.h
src/TypeSystem/: GenericHandle.h  Reflection.h  TypeID.h
src/VirtualFileSystem/: DirectoryHandle.cpp  DirectoryHandle.h  FileHandle.cpp  FileHandle.h  FileOperationHandle.cpp  FileOperationHandle.h  FileStream.cpp  FileStream.h  FileWatch.cpp  FileWatch.h  FileWatchManager.cpp  FileWatchManager.h  IFileSystemBackend.h  LocalFileSystemBackend.cpp  LocalFileSystemBackend.h  PlatformResourceUtils.cpp  PlatformResourceUtils.h  VirtualFileSystem.cpp  VirtualFileSystem.h  WriteBatch.cpp  WriteBatch.h
src/entropy/: entropy_concurrency_types_c.cpp  entropy_directory_handle_c.cpp  entropy_file_handle_c.cpp  entropy_file_operation_handle_c.cpp  entropy_vfs_types_c.cpp  entropy_virtual_file_system_c.cpp  entropy_work_contract_group_c.cpp  entropy_work_contract_handle_c.cpp  entropy_work_graph_c.cpp  entropy_work_service_c.cpp  entropy_write_batch_c.cpp
tools/: setup_hooks.sh
